<resources>
    <string name="app_name">Mortgage-calculator-rugema</string>
    <string name="dollar_sign">$</string>
    <string name="percent_sign">%</string>
    <string name="home_value">Home Value:  </string>
    <string name="loan_amount">Loan Amount:  </string>
    <string name="interest_rate">Interest Rate:  </string>
    <string name="loan_term">Loan Term:  </string>
    <string name="year">years</string>
    <string name="start_date">Start Date:  </string>
    <string name="property_tax">Property Tax:  </string>
    <string name="pmi">PMI:  </string>
    <string name="home_ins">Home Ins:  </string>
    <string name="monthly_hoa">Monthly HOA:  </string>
    <string name="calculate_btn">Calculate</string>
    <string name="ins_yrs">$/yr</string>
    <string name="payment_with_pmi">Payment with PMI</string>
    <string name="pymt_pmi">0</string>
    <string name="title">Mortgage Loan Information</string>
    <string name="mortg_summary">Mortgage Summary</string>
    <string name="pmnt_after_years">After Months</string>
    <string-array name="arr_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mars</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="arr_years">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
</resources>
