<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mortgage_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cofc.mortgage_calculator_rugema.MortgageSummaryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mortgage Repayment Summary"
            android:textStyle="bold"
            android:textSize="@dimen/title_dimen" />
    </LinearLayout>

    <TextView
        android:text="@string/payment_with_pmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pmntWithPMILabel"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:text="@string/pmnt_after_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"
        android:id="@+id/pmntAfterYrsViewLabel"
        android:layout_alignBaseline="@+id/pmntWithPMILabel"
        android:layout_alignBottom="@+id/pmntWithPMILabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/pymt_pmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pmntAfterYrsValue"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:layout_below="@+id/pmntWithPMIValue"
        android:layout_alignRight="@+id/pmntAfterYrsViewLabel"
        android:layout_alignEnd="@+id/pmntAfterYrsViewLabel" />

    <TextView
        android:text="@string/pymt_pmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pmntWithPMIValue"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignRight="@+id/pmntWithPMILabel"
        android:layout_alignEnd="@+id/pmntWithPMILabel" />


</RelativeLayout>
